--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hexo-renderer-pug": "^3.0.0",
     "hexo-renderer-stylus": "^3.0.0",
     "hexo-server": "^3.0.0",
-    "hexo-theme-anzhiyu": "^1.6.9"
+    "hexo-theme-anzhiyu": "^1.6.9",
+    "valine": "^1.5.1"
   }
 }
