1.完成了评论区功能 2.完成了文章顶部图

--- a/_config.anzhiyu.yml
+++ b/_config.anzhiyu.yml
@@ -142,7 +142,7 @@ avatar:
   effect: false
 
 # Disable all banner image
-disable_top_img: true
+disable_top_img: false
 
 # The banner image of home page
 index_img: false # "background: url() top / cover no-repeat"
@@ -161,7 +161,6 @@ cover:
   # When cover is not set, the default cover is displayed (当没有设置cover时，默认的封面显示)
   default_cover:
     # - /img/default_cover.jpg
-
 
 # Replace Broken Images (替换无法显示的图片)
 error_img:
@@ -313,7 +312,7 @@ addtoany:
 comments:
   # Up to two comments system, the first will be shown as default
   # Choose: Valine/Waline/Twikoo/Artalk
-  use: Twikoo,Waline
+  use: twikoo
   text: true # Display the comment name next to the button
   # lazyload: The comment system will be load when comment element enters the browser's viewport.
   # If you set it to true, the comment count will be invalid
@@ -359,7 +358,7 @@ waline:
 # Twikoo
 # https://github.com/imaegoo/twikoo
 twikoo:
-  envId:
+  envId: https://blog-commit-psi.vercel.app
   region:
   visitor: false
   option:
@@ -1188,7 +1187,7 @@ accesskey:
 
 # 友情链接顶部相关配置
 linkPageTop:
-  enable: true
+  enable: false
   title: 与数百名博主无限进步
   # 添加博主友链的评论自定义格式
   addFriendPlaceholder: "昵称（请勿包含博客等字样）：\n网站地址（要求博客地址，请勿提交个人主页）：\n头像图片url（请提供尽可能清晰的图片，我会上传到我自己的图床）：\n描述：\n站点截图（可选）：\n"
