--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,11 @@ external_link:
   exclude: ''
 filename_case: 0
 render_drafts: true #显示草稿
-post_asset_folder: false
+post_asset_folder: true
+#使用markdown嵌入图片
+marked:
+  prependRoot: true
+  postAsset: true
 relative_link: false
 future: true
 highlight:
