--- a/_config.anzhiyu.yml
+++ b/_config.anzhiyu.yml
@@ -142,7 +142,7 @@ avatar:
   effect: false
 
 # Disable all banner image
-disable_top_img: false
+disable_top_img: true
 
 # The banner image of home page
 index_img: false # "background: url() top / cover no-repeat"
