--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,13 @@ timezone: Asia/Shanghai
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
+url: https://Blog.aikeking.cn
+root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
-  trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
-  trailing_html: true # Set to false to remove trailing '.html' from permalinks
+  trailing_index: false # Set to false to remove trailing 'index.html' from permalinks
+  trailing_html: false # Set to false to remove trailing '.html' from permalinks
 
 # Directory
 source_dir: source
@@ -29,7 +30,12 @@ category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
-
+  - 'images/**'
+  - 'json/**'
+  - 'js/**'
+  - 'css/**'
+  - 'fonts/**'
+  - 'i18n/**'
 # Writing
 new_post_name: :title.md # File name of new posts
 default_layout: post
@@ -40,7 +46,11 @@ external_link:
   exclude: ''
 filename_case: 0
 render_drafts: true #显示草稿
-post_asset_folder: false
+#markedown嵌入图片
+post_asset_folder: true
+marked:
+  prependRoot: true
+  postAsset: true
 relative_link: false
 future: true
 highlight:
