--- a/source/_data/about.yml
+++ b/source/_data/about.yml
@@ -1,6 +1,6 @@
 - class_name: 关于页
-  subtitle: 生活明朗，万物可爱✨
-  avatarImg: https://npm.elemecdn.com/anzhiyu-blog-static@1.0.0/img/avatar.webp
+  subtitle: Everything is possible✨
+  avatarImg: /images/avatar3.jpg
   avatarSkills:
     left:
       - 🤖️ 数码科技爱好者
@@ -13,7 +13,7 @@
       - 团队小组发动机 🧱
       - 壮汉人狠话不多 💢
   name: 汪俊
-  description: 是一名 前端工程师、学生、独立开发者、博主
+  description: 是一名 学生、独立开发者、个人博主、数码爱好者
   aboutsiteTips:
     tips: 追求
     title1: 源于
@@ -31,22 +31,18 @@
     tips: 生涯
     title: 无限进步
     list:
-      - desc: EDU,软件工程专业
+      - desc: HNIT,软件工程专业
         color: "#357ef5"
-      - desc: EDU,软件工程专业
-        color: "#357ef5"
-      - desc: EDU,软件工程专业
-        color: "#357ef5"
-    img: https://bu.dusays.com/2023/04/21/644287166329b.png
+    img: https://resource.joker2yue.cn/blog/images/about/career/life.png
   statistic:
     link: /archives
     text: 文章隧道
     cover: https://bu.dusays.com/2023/05/01/644f4b037b930.jpg
   map:
     title: 我现在住在
-    StrengthenTitle: 中国,衡阳市
-    background: https://bu.dusays.com/2023/07/05/64a4c61cb20ef.jpg
-    backgroundDark: https://bu.dusays.com/2023/07/05/64a4c63495ac5.jpg
+    StrengthenTitle: 中国,岳阳市
+    background: /images/address.png
+    backgroundDark: /images/address2.png
   selfInfo:
     selfInfoTips1: 生于
     selfInfoContentYear: 2002
@@ -55,24 +51,24 @@
     selfInfoTips3: 现在职业
     selfInfoContent3: 大三学生👨‍🎓
   personalities:
-    author_name: 执政官
-    personality_type: ESFJ-A
+    author_name: 辩护人
+    personality_type: ISFJ-A
     photo_url: https://bu.dusays.com/2023/07/05/64a4c63495ac5.jpg
-    personality_img: https://npm.elemecdn.com/anzhiyu-blog@2.0.8/img/svg/ESFJ-A.svg
-    name_url: https://www.16personalities.com/ch/esfj-%E4%BA%BA%E6%A0%BC
+    personality_img: https://www.16personalities.com/static/images/personality-types/avatars/email/large/ISFJ_male.png?v=1
+    name_url: https://www.16personalities.com/isfj-personality
   maxim:
-    maxim_tips: 座右铭
-    maxim_top: 生活明朗，
-    maxim_bottom: 万物可爱。
+    maxim_tips: I want to tell you
+    maxim_top: 珍惜当下，
+    maxim_bottom: 未来可期。
   buff:
     buff_tips: 特长
-    buff_top: 脑回路新奇的 酸菜鱼
-    buff_bottom: 二次元指数 MAX
+    buff_top: 睡懒觉
+    buff_bottom: 打游戏
   game:
     game_tips: 爱好游戏
-    game_title: LOL
-    game_uid: "UID: 125766904"
-    game_bg: https://bu.dusays.com/2023/04/22/64433bf26e25d.webp
+    game_title: LOL(艾欧尼亚)
+    game_uid: "UID: 葡萄美美酒夜光杯"
+    game_bg: /images/LOL.jpg
   comic:
     comic_tips: 爱好番剧
     comic_title: 追番
@@ -99,54 +95,54 @@
     like_bottom: 手机、电脑软硬件
   music:
     music_tips: 音乐偏好
-    music_title: 许嵩、民谣、华语流行
-    music_bg: https://p2.music.126.net/Mrg1i7DwcwjWBvQPIMt_Mg==/79164837213438.jpg
+    music_title: 黎明、张学友、郑中基
+    music_bg: /images/music1.png
     music_link: /music
   reward_list:
     - name: 海阔蓝
       amount: 8.8
       datatime: 2023-03-28
-    - name: LK66
-      amount: 66.6
-      datatime: 2023-03-24
-    - name: 张时貳
-      amount: 6.6
-      datatime: 2023-01-22
-    - name: ZeroAf
-      amount: 9.9
-      datatime: 2022-12-14
-    - name: LuckyWangXi
-      amount: 6.6
-      datatime: 2022-12-14
-    - name: 刀中日月长
-      amount: 10
-      datatime: 2022-11-16
-    - name: 鹿啵包
-      amount: 10
-      datatime: 2022-11-08
-    - name: 疾速k
-      amount: 50
-      datatime: 2022-09-20
-    - name: 伴舟先生大霖子
-      amount: 4.03
-      datatime: 2022-10-27
-      suffix: 贝壳
-    - name: Magica_0x0
-      amount: 3.36
-      datatime: 2022-10-07
-      suffix: 贝壳
-    - name: 名字就是要短像这样
-      amount: 3.36
-      datatime: 2022-08-25
-      suffix: 贝壳
-    - name: Leviathan520
-      amount: 1.34
-      datatime: 2022-08-23
-      suffix: 贝壳
-    - name: 托马斯
-      amount: 10
-      datatime: 2022-08-19
-    - name: 哇是猫猫欸
-      amount: 1.34
-      datatime: 2022-08-19
-      suffix: 贝壳
+#    - name: LK66
+#      amount: 66.6
+#      datatime: 2023-03-24
+#    - name: 张时貳
+#      amount: 6.6
+#      datatime: 2023-01-22
+#    - name: ZeroAf
+#      amount: 9.9
+#      datatime: 2022-12-14
+#    - name: LuckyWangXi
+#      amount: 6.6
+#      datatime: 2022-12-14
+#    - name: 刀中日月长
+#      amount: 10
+#      datatime: 2022-11-16
+#    - name: 鹿啵包
+#      amount: 10
+#      datatime: 2022-11-08
+#    - name: 疾速k
+#      amount: 50
+#      datatime: 2022-09-20
+#    - name: 伴舟先生大霖子
+#      amount: 4.03
+#      datatime: 2022-10-27
+#      suffix: 贝壳
+#    - name: Magica_0x0
+#      amount: 3.36
+#      datatime: 2022-10-07
+#      suffix: 贝壳
+#    - name: 名字就是要短像这样
+#      amount: 3.36
+#      datatime: 2022-08-25
+#      suffix: 贝壳
+#    - name: Leviathan520
+#      amount: 1.34
+#      datatime: 2022-08-23
+#      suffix: 贝壳
+#    - name: 托马斯
+#      amount: 10
+#      datatime: 2022-08-19
+#    - name: 哇是猫猫欸
+#      amount: 1.34
+#      datatime: 2022-08-19
+#      suffix: 贝壳
