--- a/_config.anzhiyu.yml
+++ b/_config.anzhiyu.yml
@@ -428,7 +428,7 @@ footer:
         shields: https://resource.joker2yue.cn/blog/images/badge/Frame-Hexo.svg #徽标API
         message: 博客框架为Hexo_v6.3.0 #徽标提示语
 #      - link: https://blog.anheyu.com/
-#        shields: https://resource.joker2yue.cn/blog/images/badge/Theme-AnZhiYu.svg
+#        shields: https://npm.elemecdn.com/anzhiyu-blog@2.1.5/img/badge/湘ICP备-2022004213号.svg
 #        message: 本站使用AnZhiYu主题
       - link: https://www.dogecloud.com/
         shields: https://resource.joker2yue.cn/blog/images/badge/CDN-Doge.svg
@@ -515,11 +515,11 @@ footer:
       link: /copyright
     linkList:
       - link: https://github.com/anzhiyu-c/hexo-theme-anzhiyu
-#        text: 主题
+        text: 主题
 #       - link: https://image.anheyu.com
 #         text: 图床
-#       - link: https://beian.miit.gov.cn/
-#         text: 湘ICP备-xxxxxxx号
+      - link: https://beian.miit.gov.cn/
+        text: 湘ICP备-2023031450号
     subTitle:
       enable: false
       # Typewriter Effect (打字效果)
